@@ -27,8 +27,10 @@ hockeypuck (0.5~alpha3) precise; urgency=low
     mgo/worker.go, mgo/worker_test.go, pgp.go, pgp_types.go, types.go:
     - Refactoring: pull non-Mongo-specific code up to top-level hockeypuck
       package.
+  * mgo/worker.go:
+    - Minimum viable machine readable search output.
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Fri, 14 Sep 2012 14:49:57 -0500
+ -- Casey Marshall <casey.marshall@gazzang.com>  Fri, 14 Sep 2012 15:35:44 -0500
 
 hockeypuck (0.1~alpha1) precise; urgency=low
 
